* Added FFI_Export type which allows Idris functions to be exportoed and
  called from foreign code
* Instances can now have documentation strings.
* Type providers can have documentation strings.
* Unification errors now (where possible) contain information about provenance
  of a type
* New REPL command ":core TM" that shows the elaborated form of TM along with
  its elaborated type using the syntax of TT

New in 0.9.16:
--------------
* Inductive-inductive definitions are now supported (i.e. simultaneously
  defined types where one is indexed by the other.)
* Implicits and type class constraints can now appear in scopes other than
  the top level.
* Importing a module no longer means it is automatically reexported. A new
  "public" modifier has been added to import statements, which will reexport
  the names exported from that module.
* Implemented @-patterns. A pattern of the form x@p on the left hand side
  matches p, with x in scope on the right hand side with value p.
* A new tactic sourceLocation that fills the current hole with the current
  source code span, if this information is available. If not, it raises an
  error.
* Better Unicode support for the JavaScript/Node codegen
* ':search' and ':apropos' commands can now be given optional package lists
  to search.
* Vect, Fin and So moved out of prelude into base, in modules Data.Vect,
  Data.Fin and Data.So respectively.
* Several long-standing issues resolved, particularly with pattern matching
  and coverage checking.
* Modules can now have API documentation strings.

New in 0.9.15:
--------------
* Two new tactics: skip and fail. Skip does nothing, and fail takes a string
  as an argument and produces it as an error.
* Corresponding reflected tactics Skip and Fail. Reflected Fail takes a list
  of ErrorReportParts as an argument, like error handlers produce, allowing
  access to the pretty-printer.
* Stop showing irrelevant and inaccessible internal names in the interactive
  prover.