@@ -30,7 +30,9 @@ New in 0.9.17:
 * Unification errors now (where possible) contain information about provenance
   of a type
 * New REPL command ":core TM" that shows the elaborated form of TM along with
-  its elaborated type using the syntax of TT
+  its elaborated type using the syntax of TT. IDE mode has a corresponding
+  command :elaborate-term for serialized terms.
+
 
 New in 0.9.16:
 --------------
